fixed horizontal scroll issues

--- a/ui/src/index.sass
+++ b/ui/src/index.sass
@@ -14,6 +14,7 @@ body
   font-weight: 400
   word-break: break-word
   overflow-y: hidden
+  overflow-x: hidden
 
 section
   min-height: 45vw
